# cybera-osc

./: .gitignore  README.md  setup.cfg
cybera_osc/: __init__.py  osc.py  version.py
cybera_osc/v1/: __init__.py  add_cyberabot_to_projects.py  container_create.py  create_vfs_subnet.py  cybera_cli.py  cybera_test.py  cybera_utils.py  flavor_fuzzy_search.py  flavor_search.py  floating_ip_delete.py  floating_ip_list.py  floating_ip_show.py  hypervisor_stats.py  image_fuzzy_search.py  image_latest.py  image_search.py  image_share_list.py  image_sharing.py  image_unshare.py  jttest.py  network_create_provider.py  network_list.py  object_create.py  project_artifacts.py  project_cleanup.py  project_fuzzy_search.py  project_search.py  project_user_add.py  project_user_remove.py  security_group_list.py  security_group_rule_delete.py  server_list.py  subnet_list.py  user_cleanup.py  user_fuzzy_search.py  user_membership.py  user_role_list.py  user_search.py  vfs_destroy_instance.py  vfs_instance_upgradeable.py  (+5 more)
