[metadata]
name = cybera_osc
summary = OpenStack plugins for Cybera
description-file =
    README.rst
author = Cybera
author-email = sysadmin@cybera.ca
home-page = http://cybera.ca

[files]
packages =
    cybera_osc

[entry_points]
openstack.cli.extension =
    cybera = cybera_osc.osc

openstack.cybera.v1 =
    cybera add cyberabot = cybera_osc.v1:CliAddCyberabotToProjects
    cybera hypervisor stats = cybera_osc.v1:CliHypervisorStats
    cybera project cleanup = cybera_osc.v1:CliProjectCleanup
    cybera server list = cybera_osc.v1:CliServerList
    cybera test = cybera_osc.v1:CliTest
    cybera user cleanup = cybera_osc.v1:CliUserCleanup

[wheel]
universal = 1

