[metadata]
name = cybera_osc
summary = OpenStack plugins for Cybera
description-file =
    README.md
author = Cybera
author-email = sysadmin@cybera.ca
home-page = http://cybera.ca

[files]
packages =
    cybera_osc

[entry_points]
openstack.cli.extension =
    cybera = cybera_osc.osc

openstack.cybera.v1 =
    cybera add cyberabot = cybera_osc.v1:CliAddCyberabotToProjects
    cybera floating ip delete = cybera_osc.v1:CliFloatingIPDelete
    cybera floating ip show = cybera_osc.v1:CliFloatingIPShow
    cybera hypervisor stats = cybera_osc.v1:CliHypervisorStats
    cybera image search = cybera_osc.v1:CliImageFuzzySearch
    cybera image share = cybera_osc.v1:CliImageSharing
    cybera project artifacts = cybera_osc.v1:CliProjectArtifacts
    cybera project cleanup = cybera_osc.v1:CliProjectCleanup
    cybera project search = cybera_osc.v1:CliProjectFuzzySearch
    cybera project user add = cybera_osc.v1:CliProjectUserAdd
    cybera security group list = cybera_osc.v1:CliSecurityGroupList
    cybera server list = cybera_osc.v1:CliServerList
    cybera test = cybera_osc.v1:CliTest
    cybera user cleanup = cybera_osc.v1:CliUserCleanup
    cybera user membership = cybera_osc.v1:CliUserMembership
    cybera user search = cybera_osc.v1:CliUserFuzzySearch

[wheel]
universal = 1

