[metadata]
name = cybera_osc
summary = OpenStack plugins for Cybera
description-file =
    README.md
author = Cybera
author-email = sysadmin@cybera.ca
home-page = http://cybera.ca

[files]
packages =
    cybera_osc

[entry_points]
openstack.cli.extension =
    cybera = cybera_osc.osc

openstack.cybera.v1 =
    cybera add cyberabot = cybera_osc.v1:CliAddCyberabotToProjects
    cybera container create = cybera_osc.v1:CliCreateContainer
    cybera flavor search = cybera_osc.v1:CliFlavorSearch
    cybera floating ip delete = cybera_osc.v1:CliFloatingIPDelete
    cybera floating ip list = cybera_osc.v1:CliFloatingIPList
    cybera floating ip show = cybera_osc.v1:CliFloatingIPShow
    cybera hypervisor stats = cybera_osc.v1:CliHypervisorStats
    cybera image search = cybera_osc.v1:CliImageSearch
    cybera image latest = cybera_osc.v1:CliImageLatest
    cybera image share = cybera_osc.v1:CliImageSharing
    cybera network list = cybera_osc.v1:CliNetworkList
    cybera network provider create = cybera_osc.v1:CliCreateProvider
    cybera object create = cybera_osc.v1:CliCreateObject
    cybera project artifacts = cybera_osc.v1:CliProjectArtifacts
    cybera project cleanup = cybera_osc.v1:CliProjectCleanup
    cybera project search = cybera_osc.v1:CliProjectSearch
    cybera project user add = cybera_osc.v1:CliProjectUserAdd
    cybera project user remove = cybera_osc.v1:CliProjectUserRemove
    cybera security group list = cybera_osc.v1:CliSecurityGroupList
    cybera security group rule delete = cybera_osc.v1:CliSecurityGroupRuleDelete
    cybera server list = cybera_osc.v1:CliServerList
    cybera subnet list = cybera_osc.v1:CliSubnetList
    cybera subnet vfs create = cybera_osc.v1:CliCreateVFSSubnet
    cybera test = cybera_osc.v1:CliTest
    cybera user cleanup = cybera_osc.v1:CliUserCleanup
    cybera user membership = cybera_osc.v1:CliUserMembership
    cybera user role list = cybera_osc.v1:CliUserRoleList
    cybera user search = cybera_osc.v1:CliUserSearch
    cybera vfs instance upgradeable = cybera_osc.v1:CliVFSInstanceUpgradeable
    cybera vfs destroy instance = cybera_osc.v1:CliVFSDestroyInstance
    cybera vfs launch instance = cybera_osc.v1:CliVFSLaunchInstance
    cybera jttest = cybera_osc.v1:CliJTTest

[wheel]
universal = 1
